# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "flight_sql_server"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow-flight = { version ="*", features = ["flight-sql-experimental", "tls", "cli"] }
arrow = {version = "53.3.0"}
arrow-array = {version = "53.3.0"}
arrow-cast = {version = "53.3.0"}
arrow-schema = {version = "53.3.0"}
tonic = {version = "*"}
tokio = {version = "*"}
futures = {version = "*"}
anyhow = { version = "*"}
clap = { version = "4.5.21", default-features = false, features = ["std", "derive", "env", "help", "error-context", "usage", "wrap_help", "color", "suggestions"]}
tracing-log = { version = "0.2"}
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter", "fmt"]}
#slatedb
slatedb = "*"
bytes = "*"
object_store = "*"
async-stream = "0.3.6"

[[bin]]
name = "flight_sql_client"
path = "src/client/flight_sql_client.rs"

[[bin]]
name = "flight_sql_server"
path = "src/server/flight_sql_server.rs"
